@@ -1,3 +1,6 @@
+2007-09-12 yo
+* Split Currency_asNumericCode into Base_convertCurrencyCodeToNumericCode.
+
 2007-09-12 Yusei
 * Removed module_view action from modules's type information. Now the action is provided by erp5_core as global action.
 
